[package]
name = "blockdreamer"
version = "0.1.0"
edition = "2021"

[features]
default = ["mainnet"]
mainnet = []
gnosis = []

[dependencies]
futures = "0.3.4"
itertools = "0.10.3"
pathfinding = "3.0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.5"
reqwest = "0.11.11"
serde_json = "1.0.0"
clap = { version = "4", features = ["derive"] }
libp2p = "0.52.4"

eth2 = { git = "https://github.com/michaelsproul/lighthouse", branch = "v3-api-headers" }
eth2_network_config = { git = "https://github.com/michaelsproul/lighthouse", branch = "v3-api-headers" }
sensitive_url = { git = "https://github.com/michaelsproul/lighthouse", branch = "v3-api-headers" }
slot_clock = { git = "https://github.com/michaelsproul/lighthouse", branch = "v3-api-headers" }
logging = { git = "https://github.com/michaelsproul/lighthouse", branch = "v3-api-headers" }

[dev-dependencies]
proptest = "1.0.0"
